--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,13 @@
 @import url(../vendor/normalize.css);
+@import url(../blocks/cover/cover.css);
 
 * {
   margin: 0;
-  padding: 0; 
+  padding: 0;
+}
+
+:root {
+  --dark-gray: #E5E5E5;
+  --white: #FFFFFF;
+  --light-gray: #AAAAAA;
 }
