--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/cover/cover.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/page/page.css);
 
 * {
   margin: 0;
@@ -7,7 +9,7 @@
 }
 
 :root {
-  --dark-gray: #E5E5E5;
+  --black: #2A2C2F;
   --white: #FFFFFF;
-  --light-gray: #AAAAAA;
+  --gray: #AAAAAA ;
 }
