--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,7 @@
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/page/page.css);
-
+@import url(../blocks/lead/lead.css);
 * {
   margin: 0;
   padding: 0;
