--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,8 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/intro/intro.css);
+
 * {
   margin: 0;
   padding: 0;
