--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,5 +1,19 @@
 .intro__list {
   list-style: none;
   margin-top: 32px;
-  max-width: 690px; 
+  max-width: 690px;
+}
+
+@media only screen and (max-width: 320px) {
+  .intro__list {
+    max-width: 288px;
+    margin-left: 16px;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  .intro__list {
+    margin-left: 24px;
+  }
 }
