--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -5,13 +5,23 @@
   line-height: 34px;
   max-width: 690px;
   height: auto;
-  margin-top: 40px; 
+  margin-top: 40px;
 }
 
 
 @media only screen and (max-width: 320px) {
   .intro__subtitle {
-    max-width: 288px;
     line-height: 30px;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  .intro__subtitle {
+    height: auto;
+    margin-left: 24px;
+    margin-right: 24px;
   }
 }
