--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,3 +5,15 @@
   text-transform: uppercase;
   margin-top: 8px;
 }
+
+@media only screen and (max-width: 320px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .lead__caption {
+    margin-left: 24px; 
+  }
+}
