--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/photo-grid/photo-grid.css);
 
 * {
   margin: 0;
