adding lead__image-container. resolved responsiveness issues with lead/ header/ intro/ grid blocks. default grid-gap still unresolved

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,8 +5,9 @@
 
 .header {
   display: flex;
-  max-width: 984px;
+  max-width: 928px;
   width: 100%;
+  height: auto;
   padding-top: 34px;
   justify-content: space-between;
   margin: 0 auto;
@@ -15,5 +16,11 @@
 @media only screen and (max-width: 320px) {
   .header {
     padding-top: 20px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .header {
+    max-width: 984px;
   }
 }
