--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -11,7 +11,13 @@
   flex-direction: column;
   text-align: left;
   margin: 0 auto;
-  max-width: 984px;
+  max-width: 928px;
   width: 100%;
   height: auto;
+}
+
+@media only screen and (min-width: 1280px) {
+  .intro {
+    max-width: 984px; 
+  }
 }
