--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -3,11 +3,13 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     list-style: none;
+    grid-gap: 14px;
   }
 
 @media only screen and (max-width: 768px) and (min-width: 321px){
   .photo-grid__list {
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 16px; 
   }
 }
 
@@ -15,6 +17,7 @@
   .photo-grid__list {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    grid-gap: 16px;
   }
 }
 
