--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,15 +1,22 @@
-.cover__title {
+.card__title {
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
-  text-align: center;
-  padding-top: 233px;
 }
 
+@media only screen and (max-width: 768px) {
+  .card__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+
 @media only screen and (max-width: 320px) {
-  .cover__title {
+  .card__title {
     font-size: 32px;
     line-height: 35px;
+    margin-left: 16px; 
   }
 }
