--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,10 +1,41 @@
 @import url(__subtitle/cover__subtitle.css);
 @import url(__title/cover__title.css);
+@import url(__item/cover__item.css);
 
 .cover {
   background-image: url("/images/__background.png");
   width: 100%;
-  height: 500px;
+  height: 640px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.cover:before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background: var(--black);
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+  z-index: 1;
+  transition-duration: 0.7s;
+}
+
+.cover:hover:before {
+  opacity: 0.8; 
+}
+
+@media only screen and (min-width: 1280px){
+  .cover {
+    max-width: 1184px;
+    height: 740px;
+  }
 }
