--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -1,6 +1,6 @@
   .photo-grid__list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 300px);
     grid-template-rows: repeat(4, 1fr);
     list-style: none;
     grid-gap: 14px;
@@ -9,7 +9,7 @@
 @media only screen and (max-width: 768px) and (min-width: 321px){
   .photo-grid__list {
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 16px; 
+    grid-gap: 16px;
   }
 }
 
