--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,9 @@
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/card/card.css);
+
 
 * {
   margin: 0;
