footer block added. card__website_margin-top modifier added

--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -6,6 +6,7 @@
 @import url(__title/card__title.css);
 @import url(__url-heading/card__url-heading.css);
 @import url(__website/card__website.css);
+@import url(__website/__website_margin-top/card__website_margin-top.css);
 
 .card {
   display: flex;
