--- a/blocks/card/__website/__website_margin-top/card__website_margin-top.css
+++ b/blocks/card/__website/__website_margin-top/card__website_margin-top.css
@@ -1,4 +1,9 @@
 .card__website_margin-top {
   margin-top: 76px;
+}
 
+@media only screen and (max-width: 768px) {
+  .card__website_margin-top {
+    margin-top: 46px;
+  }
 }
