--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,4 +1,3 @@
-@import url(__column/card__column.css);
 @import url(__image/card__image.css);
 @import url(__link/card__link.css);
 @import url(__paragraph-large/card__paragraph-large.css);
@@ -7,30 +6,42 @@
 @import url(__url-heading/card__url-heading.css);
 @import url(__website/card__website.css);
 @import url(__website/__website_margin-top/card__website_margin-top.css);
+@import url(__paragraph-container/card__paragraph-container.css);
 
 .card {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 76px 48px repeat(2, 1fr) 100px;
+  grid-template-areas:
+  "title website"
+  " . . "
+  "image text"
+  "image text"
+  " . text";
   max-width: 928px;
-  width: 100%;
+  width: calc(100% - 96px);
   margin: 0 auto;
   padding-bottom: 80px;
+  grid-column-gap: 16px;
 }
 
-@media only screen and (min-width: 1280px){
-  .card {
-    max-width: 984px;
-  }
+.card:nth-of-type(2) {
+  grid-template-rows: 156px 48px repeat(2, 1fr) 100px;
 }
 
 @media only screen and (max-width: 768px){
+  .card:nth-of-type(2) {
+    grid-template-rows: 92px 48px repeat(2, 1fr) 100px;
+  }
   .card {
-    max-width: 720px;
+    grid-template-rows: 46px 48px repeat(2, 1fr) 100px;
   }
 }
 
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 320px) {
   .card {
-    max-width: 320px;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    width: 100%; 
   }
 }
