--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -3,12 +3,14 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
+  grid-area: title;
 }
 
 @media only screen and (max-width: 768px) {
   .card__title {
     font-size: 42px;
     line-height: 46px;
+    height: 46px;
   }
 }
 
@@ -17,6 +19,6 @@
   .card__title {
     font-size: 32px;
     line-height: 35px;
-    margin-left: 16px; 
+    margin-left: 16px;
   }
 }
