--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,8 +6,7 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  max-width: 928px;
+  width: calc(100% - 96px);
   height: 134px;
   margin: 0 auto;
 }
@@ -20,11 +19,12 @@
 
 @media only screen and (max-width: 768px) {
   .footer{
+    width: calc(100% - 48px);
     max-width: 720px;
   }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 400px) {
   .footer {
     height: 286px;
     flex-direction: column;
