--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,6 +4,9 @@
   letter-spacing: 0.15em;
   text-transform: uppercase;
   margin-top: 8px;
+  max-width: 924px;
+  width: 100%
+  margin: 0 auto;
 }
 
 @media only screen and (max-width: 320px) {
@@ -14,6 +17,13 @@
 
 @media only screen and (max-width: 768px) {
   .lead__caption {
-    margin-left: 24px; 
+    margin-left: 24px;
+  }
+}
+
+@media only screen and (max-width 1024px) {
+  .lead__caption {
+    max-width: 984px;
+    border: 1px solid yellow;
   }
 }
