--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -16,6 +16,8 @@
     padding-top: 16px;
     font-size: 16px;
     line-height: 20px;
-    max-width: 288px; 
+    max-width: 288px;
+    margin-left: 16px;
+    margin-right: 16px; 
   }
 }
