--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -14,5 +14,8 @@
   .lead__title {
     font-size: 40px;
     line-height: 44px;
+    max-width: 288px;
+    margin-left: 16px;
+    margin-right: 16px; 
   }
 }
