--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,5 +3,6 @@
   font-family: 'Inter', sans-serif;
   color: var(--white);
   width: 100%;
-  height: auto; 
+  height: auto;
+  min-width: 300px; 
 }
