--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -9,14 +9,13 @@
 @media only screen and (max-width: 320px) {
   .photo-grid__image{
     max-width: 288px;
-    width: 100%;
+    width: 100%: 
     height: auto;
-
   }
 }
 
 
-@media only screen and (max-width: 768px) and (min-width: 321px){
+@media only screen and (max-width: 768px){
   .photo-grid__image{
     max-width: 352px;
     height: auto;
