--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -1,12 +1,12 @@
   .photo-grid__list {
+    width: calc(100% - 96px);
     display: grid;
-    grid-template-columns: repeat(3, 300px);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     list-style: none;
     grid-gap: 14px;
   }
 
-@media only screen and (max-width: 768px) and (min-width: 321px){
+@media only screen and (max-width: 768px){
   .photo-grid__list {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 16px;
@@ -16,7 +16,6 @@
 @media only screen and (min-width: 1280px) {
   .photo-grid__list {
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
     grid-gap: 16px;
   }
 }
@@ -25,6 +24,7 @@
   .photo-grid__list {
     display: flex;
     flex-direction: column;
+    width: 100%;
     margin-left: 16px;
     margin-right: 16px;
   }
