--- a/blocks/card/__link/card__link.css
+++ b/blocks/card/__link/card__link.css
@@ -4,4 +4,9 @@
   font-size: 18px;
   line-height: 22px;
   color: var(--white);
+  transition: 0.3s ease-in-out; 
+}
+
+.card__link:hover {
+  opacity: 0.8;
 }
