--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -13,34 +13,34 @@
 .card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 76px 48px repeat(2, 1fr) 100px;
+  grid-template-rows: 76px 48px repeat(2, 1fr);
   grid-template-areas:
   "title website"
   " . . "
   "image text"
-  "image text"
-  " . text";
+  "image text";
   max-width: 928px;
-  width: calc(100% - 96px);
   margin: 0 auto;
   padding-bottom: 80px;
   grid-column-gap: 16px;
 }
 
 .card:nth-of-type(2) {
-  grid-template-rows: 156px 48px repeat(2, 1fr) 100px;
+  grid-template-rows: 152px 48px repeat(2, 1fr);
 }
 
 @media only screen and (max-width: 768px){
-  .card:nth-of-type(2) {
-    grid-template-rows: 92px 48px repeat(2, 1fr) 100px;
-  }
   .card {
-    grid-template-rows: 46px 48px repeat(2, 1fr) 100px;
+    grid-template-rows: 46px 48px repeat(2, 1fr);
+  }
+  .card:nth-of-type(2) {
+    grid-template-rows: 48px 96px repeat(2, 1fr);
   }
 }
 
-@media only screen and (max-width: 320px) {
+
+
+@media only screen and (max-width: 450px) {
   .card {
     display: flex;
     flex-direction: column;
