--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,18 +4,20 @@
   padding-top: 92px;
   margin: 0 auto;
   justify-content: center;
-  width: 100%;
+  width: calc(100% - 96px);
   height: auto;
 }
 
-@media only screen and (max-width 768px) {
+@media only screen and (max-width: 768px) {
   .places {
     padding-top: 88px;
+    width: calc(100% - 48px);
   }
 }
 
-@media only screen and (max-width 320px) {
+@media only screen and (max-width: 420px) {
   .places {
     padding-top: 64px;
+    width: 100%; 
   }
 }
