--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,5 +1,6 @@
 .card__image {
   width: 440px;
+  min-width: 400px; 
   max-width: 100%;
   height: auto;
   grid-area: image;
@@ -15,12 +16,15 @@
   .card__image {
     width: 340px;
     max-width: 100%;
+    min-width: 230px;
   }
 }
 
-@media only screen and (max-width: 320px) {
+
+
+@media only screen and (max-width: 450px) {
   .card__image {
-    width: 320px;
+    width: 100%;
     margin: 32px auto;
   }
 }
