--- a/blocks/card/__paragraph-container/card__paragraph-container.css
+++ b/blocks/card/__paragraph-container/card__paragraph-container.css
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   grid-area: text;
+  width: 100%; 
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 450px) {
   .card__paragraph-container {
     width: calc(100% - 32px);
-    margin: 0 auto; 
+    margin: 0 auto;
   }
 }
