--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -4,6 +4,7 @@
   font-size: 72px;
   line-height: 76px;
   grid-area: title;
+  max-width: 440px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -15,7 +16,8 @@
 }
 
 
-@media only screen and (max-width: 320px) {
+
+@media only screen and (max-width: 450px) {
   .card__title {
     font-size: 32px;
     line-height: 35px;
