--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -1,5 +1,9 @@
 .cover__item {
-  position: absolute;
+  position: relative;
+  background-image: url(/images/__background.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   top: 0;
   left: 0;
   z-index: 2;
@@ -7,5 +11,5 @@
   color: var(--white);
   margin: 0 auto;
   width: 100%;
-  height: 100%: auto;
+  height: auto;
 }
