--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,12 +8,13 @@
   width: 100%;
   margin: 0 auto;
   margin-top: 32px;
+  margin-bottom: 25%;
+  align-self: center;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 420px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-
   }
 }
