--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,10 +6,14 @@
   font-size: 16px;
   line-height: 18px;
   margin-right: 18px;
+  transition: 0.3s ease-in-out; 
 }
 
+.footer__link:hover {
+  opacity: 0.8;
+}
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 420px) {
   .footer__link {
     font-size: 24px;
     line-height: 24px;
