--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -12,12 +12,24 @@
   text-align: left;
   margin: 0 auto;
   max-width: 928px;
-  width: 100%;
+  width: calc(100% - 96px);
   height: auto;
 }
 
 @media only screen and (min-width: 1280px) {
   .intro {
-    max-width: 984px; 
+    max-width: 984px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .intro{
+    width: calc(100% - 48px);
+  }
+}
+
+@media only screen and (min-width: 420px) {
+  .intro{
+    width: calc(100% - 32px); 
   }
 }
