--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,13 +11,12 @@
   height: auto;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 420px) {
   .lead__subtitle {
     padding-top: 16px;
     font-size: 16px;
     line-height: 20px;
     max-width: 288px;
-    margin-left: 16px;
-    margin-right: 16px; 
+    margin: 16px auto;
   }
 }
