--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,12 +10,11 @@
   margin: 0 auto;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 420px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
     max-width: 288px;
-    margin-left: 16px;
-    margin-right: 16px; 
+    margin: 16px auto; 
   }
 }
