--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,18 +7,20 @@
   margin: 0 auto;
   margin-top: 92px;
   justify-content: center;
-  width: 100%;
+  width: calc(100% - 96px);
   height: auto;
 }
 
 @media only screen and (max-width: 768px) {
   .photo-grid {
     margin-top: 88px;
+      width: calc(100% - 48px);
   }
 }
 
 @media only screen and (max-width: 320px) {
   .photo-grid {
     margin-top: 64px;
+      width: calc(100% - 32px);
   }
 }
