--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -4,12 +4,27 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  top: 0;
-  left: 0;
-  z-index: 2;
+  z-index: 0;
   text-decoration: none;
   color: var(--white);
   margin: 0 auto;
   width: 100%;
   height: auto;
+}
+
+.cover__item:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--black);
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  z-index: 1;
+  transition-duration: 0.7s;
+}
+
+.cover__item:hover:before {
+  opacity: 0.8;
 }
