--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,7 +9,8 @@
   margin: 0 auto;
   margin-top: 32px;
   margin-bottom: 25%;
-  align-self: center;
+  opacity: 1;
+  z-index: 3;
 }
 
 @media only screen and (max-width: 420px) {
