--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,6 +6,8 @@
   text-align: center;
   align-self: center;
   margin-top: 25%;
+  opacity: 1;
+  z-index: 2;
 }
 
 @media only screen and (max-width: 420px) {
