--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,61 +1,13 @@
 @import url(__subtitle/cover__subtitle.css);
 @import url(__title/cover__title.css);
 @import url(__item/cover__item.css);
+@import url(__link-container/cover__link-container.css); 
 
 .cover {
   width: 100vw;
   height: 100%;
   display: flex;
-}
-
-/* .cover {
-  background-image: url("/images/__background.png");
-  width: 100%;
-  height: auto;
-  max-height: 640px
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  z-index: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  max-width: 1184px;
   margin: 0 auto;
+  justify-content: center;
 }
-
-.cover:before {
-  content: "";
-  height: 100%;
-  width: 100%;
-  background: var(--black);
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.3;
-  z-index: 1;
-  transition-duration: 0.7s;
-}
-
-.cover:hover:before {
-  opacity: 0.8;
-}
-
-@media only screen and (min-width: 1280px){
-  .cover {
-    max-width: 1184px;
-    height: 740px;
-  }
-}
-
-@media only screen and (max-width: 768px){
-  .cover {
-    height: 480px;
-  }
-}
-
-@media only screen and (max-width: 420px) {
-  .cover {
-    height: 240px;
-  }
-} */
