--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -1,6 +1,6 @@
 .cover__item {
   position: relative;
-  background-image: url(/images/__background.png);
+  background-image: url(../images/__background.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
