commenting out cover section

--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -1,3 +1,5 @@
+/* background-photo displays in my local server but not via github pages */
+
 .cover__item {
   position: relative;
   background-image: url(/images/background.png);
