--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,17 +5,17 @@
   text-transform: uppercase;
   margin-top: 8px;
   max-width: 924px;
-  width: 100%
+  width: 100%;
   margin: 0 auto;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 420px) {
   .lead__caption {
     margin-left: 16px;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 924px) {
   .lead__caption {
     margin-left: 24px;
   }
