--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -2,11 +2,11 @@
 
 .cover__item {
   position: relative;
-  background-image: url(../images/background.png);
+  background-image: url(/images/background.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  z-index: 0;
+  z-index: 1;
   text-decoration: none;
   color: var(--white);
   margin: 0 auto;
@@ -23,7 +23,7 @@
   width: 100%;
   height: 100%;
   opacity: 0.3;
-  z-index: 1;
+  z-index: 2;
   transition-duration: 0.7s;
 }
 
