--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -2,7 +2,7 @@
 
 .cover__item {
   position: relative;
-  background-image: url(/images/background.png);
+  background-image: url(../../../images/background.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
