fixing max-width issues in cover block

--- a/blocks/cover/__link-container/cover__link-container.css
+++ b/blocks/cover/__link-container/cover__link-container.css
@@ -2,5 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 100%; 
+  max-width: 1184px;
+  height: 100%;
+  margin: 0 auto;
+  justify-content: center;
 }
