--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -8,6 +8,7 @@
 @import url('__paragraph-med/__paragraph-med_line-height_27px/card__paragraph-med_line-height_27px.css');
 @import url('__paragraph-med/__paragraph-med_margin-bottom_zero/card__paragraph-med_margin-bottom_zero.css');
 @import url('__title/card__title.css');
+@import url('__title/__title_margin-top/card__title_margin-top.css');
 @import url('__url-heading/card__url-heading.css');
 @import url('__website/card__website.css');
 @import url('__website/__website_margin-top/card__website_margin-top.css');
