--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,14 +6,15 @@
 .header {
   display: flex;
   max-width: 928px;
-  width: calc(100% - 96px);
+  width: 100%;
   height: auto;
   padding-top: 34px;
   justify-content: space-between;
   margin: 0 auto;
 }
 
-@media only screen and (max-width: 768px) {
+
+@media only screen and (max-width: 924px) {
   .header {
     width: calc(100% - 48px);
   }
