--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -12,7 +12,7 @@
   text-align: left;
   margin: 0 auto;
   max-width: 928px;
-  width: calc(100% - 96px);
+  width: 100%;
   height: auto;
   padding: 0;
 }
