--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -20,7 +20,7 @@
   }
 }
 
-@media only screen and (min-width 1024px) {
+@media only screen and (min-width: 1024px) {
   .lead__caption {
     max-width: 984px;
   }
