--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,10 +6,10 @@
   display: flex;
   margin: 0 auto;
   margin-top: 92px;
-  padding: 0; 
+  padding: 0;
   justify-content: center;
   max-width: 928px;
-  width: calc(100% - 96px);
+  width: 100%;
   height: auto;
 }
 
@@ -19,7 +19,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 924px) {
   .photo-grid {
     margin-top: 88px;
       width: calc(100% - 48px);
