--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,7 @@
 @import url('__list/header__list.css');
 @import url('__logo/header__logo.css');
 @import url('__list-item/header__list-item.css');
+@import url('__lang-link/__lang-link_active/header__lang-link_active.css');
 
 .header {
   display: flex;
