--- a/blocks/header/__list/header__list.css
+++ b/blocks/header/__list/header__list.css
@@ -1,6 +1,7 @@
 .header__list {
   display: flex;
-  margin: 0; 
+  margin: 0;
+  padding: 0; 
   padding-top: 12px;
   font-style: normal;
   font-weight: normal;
@@ -8,7 +9,6 @@
   line-height: 28px;
   /* identical to box height, or 117% */
   text-align: right;
-
 }
 
 
