--- a/blocks/card/__url-heading/card__url-heading.css
+++ b/blocks/card/__url-heading/card__url-heading.css
@@ -1,13 +1,13 @@
 .card__url-heading {
   margin: 0;
-  padding: 0; 
+  padding: 0;
   margin-top: 22px;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
   line-height: 170%;
   /* or 20px */
-  letter-spacing: 0.2em;
+  letter-spacing: .2em;
   color: var(--gray);
 }
 
