--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,8 +3,8 @@
   font-style:  normal;
   font-weight: normal;
   font-display: swap;
-  src: url('../inter/Inter-Regular.woff2') format('woff2'),
-       url('../inter/Inter-Regular.woff') format('woff');
+  src: url('/inter/Inter-Regular.woff2') format('woff2'),
+       url('/inter/Inter-Regular.woff') format('woff');
 }
 
 
@@ -13,8 +13,8 @@
   font-style:  normal;
   font-weight: bold;
   font-display: swap;
-  src: url('../inter/Inter-Bold.woff2') format('woff2'),
-       url('../inter/Inter-Bold.woff') format('woff');
+  src: url('/inter/Inter-Bold.woff2') format('woff2'),
+       url('/inter/Inter-Bold.woff') format('woff');
 }
 
 
@@ -23,6 +23,6 @@
   font-style:  normal;
   font-weight: 900;
   font-display: swap;
-  src: url('../inter/Inter-Black.woff2') format('woff2'),
-       url('../inter/Inter-Black.woff') format('woff');
+  src: url('/inter/Inter-Black.woff2') format('woff2'),
+       url('/inter/Inter-Black.woff') format('woff');
 }
