--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'Inter';
   font-style:  normal;
-  font-weight: normal;
-  font-display: swap;
+  font-weight: 400;
   src: url('/inter/Inter-Regular.woff2') format('woff2'),
-       url('/inter/Inter-Regular.woff') format('woff');
+       url('/inter/Inter-Regular.woff') format('woff'),
+       url('/inter/Inter-Regular.ttf') format('truetype');
 }
 
 
 @font-face {
   font-family: 'Inter';
   font-style:  normal;
-  font-weight: bold;
-  font-display: swap;
+  font-weight: 700;
   src: url('/inter/Inter-Bold.woff2') format('woff2'),
-       url('/inter/Inter-Bold.woff') format('woff');
+       url('/inter/Inter-Bold.woff') format('woff'),
+       url('/inter/Inter-Bold.ttf') format('truetype');
 }
 
 
@@ -22,7 +22,7 @@
   font-family: 'Inter';
   font-style:  normal;
   font-weight: 900;
-  font-display: swap;
   src: url('/inter/Inter-Black.woff2') format('woff2'),
-       url('/inter/Inter-Black.woff') format('woff');
+       url('/inter/Inter-Black.woff') format('woff'),
+       url('/inter/Inter-Black.ttf') format('truetype');
 }
