fixed lay-out issues with cover section/ got rid of syntax errors/ deleted paragraph-med_line-height_27px modifier/ deleted empty paragraph-med modifier/ fixed lay-out issue with card block

--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: auto;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
 .cover__item::before {
@@ -27,6 +27,6 @@
   transition-duration: .7s;
 }
 
-.cover__item:hover:before {
-  opacity: 0.8;
+.cover__item:hover::before {
+  opacity: .8;
 }
