--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
   font-size: 10px;
   line-height: 14px;
-  letter-spacing: 0.15em;
+  letter-spacing: .15em;
   text-transform: uppercase;
   margin: 8px auto 0 auto;
   max-width: 924px;
