--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -4,9 +4,7 @@
 @import url('__paragraph/card__paragraph.css');
 @import url('__paragraph-container/card__paragraph-container.css');
 @import url('__paragraph-med/card__paragraph-med.css');
-@import url('__paragraph-med/__paragraph-med_margin-bottom_zero/card__paragraph-med_margin-bottom_zero.css');
 @import url('__paragraph-med/__paragraph-med_line-height_27px/card__paragraph-med_line-height_27px.css');
-@import url('__paragraph-med/__paragraph-med_margin-bottom_zero/card__paragraph-med_margin-bottom_zero.css');
 @import url('__title/card__title.css');
 @import url('__title/__title_margin-top/card__title_margin-top.css');
 @import url('__url-heading/card__url-heading.css');
@@ -30,6 +28,13 @@
 
 .card:nth-of-type(2) {
   grid-template-rows: 152px 48px repeat(2, 1fr);
+}
+
+@media only screen and (min-width: 1280px){
+  .card {
+    max-width: 984px;
+  }
+
 }
 
 @media only screen and (max-width: 768px){
