--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,17 +6,28 @@
   text-align: center;
   max-width: 320px;
   width: 100%;
-  margin: 0 auto;
-  margin-top: 32px;
-  margin-bottom: 25%;
-  opacity: 1;
+  margin: 32px auto 233px auto;
   z-index: 3;
   padding: 0;
+}
+
+@media only screen and (min-width: 1280px) {
+  .cover__subtitle {
+    margin: 32px auto 283px auto;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .cover__subtitle {
+    margin: 32px auto 153px auto;
+  }
 }
 
 @media only screen and (max-width: 420px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
+    margin: 16px auto 50px auto;
+    max-width: 288px;
   }
 }
