--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,7 +7,28 @@
   width: 100vw;
   height: 100%;
   display: flex;
+  width: 100%;
   max-width: 1184px;
+  height: 100%;
+  max-height: 740px;
   margin: 0 auto;
   justify-content: center;
+}
+
+@media only screen and (max-width: 1024px) {
+  .cover {
+    max-height: 640px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .cover{
+    max-height: 480px;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .cover{
+    max-height: 200px;
+  }
 }
